5.0
 - The PGSTD namespace alias is gone.  Use the std namespace directly.
 - pqxx::tuple is now pqxx::row, to avoid clashes with std::tuple.
 - Support for many old compilers dropped.
 - Support for "long long" and "long double" types is always enabled.
 - No longer uses obsolete std::tr1 namespace; use plain std instead.
 - Now requires libpq 9.0 or better.
 - Support for REPEATABLE READ isolation level added.
 - Build fix for OS X.
 - Build fixes for clang++ 3.2.
 - Build fix for clang++ 3.0.
 - Build fix for MinGW.
 - Build fix for BSD (and possibly other grep flavours).
 - Supports C++11.
 - No longer has obsolete debian & RPM packaging built in.
 - Fixed failure to detect some integer overflows during conversion.
4.0
 - API change: noticers are gone!  Use errorhandlers to capture error output.
 - API change: tablereaders and tablewriters are gone; they weren't safe.
 - API change: prepared statements are now weakly-typed, and much simpler.
 - API change: fields and tuples are now stand-alone classes in ::pqxx.
 - API change: thread-safety field have_strerror_r is now have_safe_strerror.
 - API change: notify_listener has been replaced with notification_receiver.
 - notification_receiver takes a payload parameter.
 - Easier Visual C++ setup.
 - Absolutely requires a libpq version with PQescapeStringConn.
 - Absolutely requires libpq 8.0 or better.
 - Changes for C++0x.
 - Supports clang++.
 - Visual C++ makefiles now support new-style unit tests.
 - Sample headers for more recent Visual Studio versions.
 - Fixes binary-data escaping problems with postgres 9.0.
 - Fixes problems with binary-string handling and escaping.
 - Fixes compatibility problems between 9.x libpq and 7.x backend.
 - quote_name to escape SQL identifiers for use in queries.
 - syntax_error reports error's approximate location in the query.
 - On Windows, now uses ws2_32 instead of wsock32.
 - Various Windows build fixes.
 - Updated for gcc 4.6.0.